--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
   "name": "music-download",
-  "version": "1.0.0",
-  "description": "基于网易云音乐API的简单音乐下载网站",
-  "main": "server.js",
+  "version": "2.0.0",
+  "description": "基于 Next.js SSR 架构的音乐下载助手，SEO 友好，支持搜索歌单与批量下载",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [
     "music",
     "download",
-    "netease"
+    "netease",
+    "nextjs",
+    "ssr",
+    "music-playlist"
   ],
-  "author": "",
+  "author": "蓉儿",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "NeteaseCloudMusicApi": "^4.15.0"
+    "i18next": "^25.6.0",
+    "NeteaseCloudMusicApi": "^4.15.0",
+    "next": "^13.5.6",
+    "next-i18next": "^15.4.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "24.9.1",
+    "@types/react": "19.2.2",
+    "typescript": "5.9.3"
   }
 }
