Enhance internationalization and button styling across the application
- Updated text elements in the Home and Playlist pages to utilize internationalization for better language support.
- Improved button styling by implementing a unified button system, ensuring consistent design and functionality.
- Added new translations for alerts, playlist details, and button labels in both English and Chinese locales.
- Refactored button classes to follow the new design principles, enhancing user experience and accessibility.

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
   "version": 2,
-  "name": "music-download",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
   "functions": {
     "pages/api/**/*.ts": {
       "maxDuration": 30
@@ -90,7 +83,7 @@
   "trailingSlash": false,
   "cleanUrls": true,
   "public": true,
-  "regions": ["hkg1", "sfo1"],
+  "regions": ["sfo1"],
   "github": {
     "silent": true
   },
