--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music-download",
+  "name": "music-download-free",
   "version": "2.0.0",
   "description": "基于 Next.js SSR 架构的音乐下载助手，SEO 友好，支持搜索歌单与批量下载",
   "scripts": {
@@ -18,6 +18,7 @@
   "author": "蓉儿",
   "license": "MIT",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "i18next": "^25.6.0",
     "NeteaseCloudMusicApi": "^4.15.0",
     "next": "^13.5.6",
