Enhance caching strategies across API routes and update configuration
- Added global caching headers in next.config.js to optimize static page and asset caching.
- Updated vercel.json to change deployment region from 'sfo1' to 'sin1'.
- Implemented specific caching controls in various API routes to improve performance and reduce load times, including adjustments for playlist details, search results, and song URLs.
- Enhanced caching for robots.txt to allow for a one-day cache duration.

--- a/vercel.json
+++ b/vercel.json
@@ -83,7 +83,7 @@
   "trailingSlash": false,
   "cleanUrls": true,
   "public": true,
-  "regions": ["sfo1"],
+  "regions": ["sin1"],
   "github": {
     "silent": true
   },
