feat(页脚): 增加站点地图链接

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
       "maxDuration": 10
     }
   },
+  "crons": [
+    {
+      "path": "/api/sitemap.xml",
+      "schedule": "0 0 * * *"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
