--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/og": "^0.8.5",
     "i18next": "^25.6.0",
     "NeteaseCloudMusicApi": "^4.15.0",
-    "next": "^13.5.6",
+    "next": "^16.0.0",
     "next-i18next": "^15.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
