feat(登录功能与优化): - 新增二维码登录功能，允许用户通过扫码登录网易云账号以下载VIP歌曲完整版。 - 添加悬浮登录按钮组件，提升用户体验并显示登录状态。 - 更新API路由以支持登录状态检查和登出功能，确保用户体验流畅。 - 优化图片URL处理，确保使用HTTPS协议，避免Mixed Content警告。 - 更新README.md，增加登录功能的使用说明，提升文档完整性。 - 改进全局样式和组件布局，增强视觉效果和交互体验。

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "2.0.0",
   "description": "基于 Next.js SSR 架构的音乐下载助手，SEO 友好，支持搜索歌单与批量下载",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "sh -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && . \"$HOME/.nvm/nvm.sh\" && nvm use && node server.js' || node server.js",
+    "dev:http": "next dev",
+    "build": "sh -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && . \"$HOME/.nvm/nvm.sh\" && nvm use && next build' || next build",
     "start": "next start"
   },
   "keywords": [
