--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,32 @@
-node_modules/
-*.logs
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# production
+/build
+/.next
+/out
+
+# misc
 .DS_Store
-downloads/
+*.pem
 
-# Next.js
-.next/
-out/
-build/
-dist/
+# HTTPS证书（本地开发用）
+*.key
+*.crt
 
-# Vercel
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
 .vercel
 
+# typescript
+*.tsbuildinfo
+next-env.d.ts
