--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "蓉儿",
   "license": "MIT",
   "dependencies": {
+    "@types/cookie": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.8.5",
+    "cookie": "^1.0.2",
     "i18next": "^25.6.0",
     "NeteaseCloudMusicApi": "^4.15.0",
     "next": "^16.0.0",
