--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@vercel/og": "^0.8.5",
     "cookie": "^1.0.2",
     "i18next": "^25.6.0",
-    "NeteaseCloudMusicApi": "^4.15.0",
+    "NeteaseCloudMusicApi": "^4.28.0",
     "next": "^16.0.0",
     "next-i18next": "^15.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^16.2.0"
+    "react-i18next": "^16.2.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "24.9.1",
