fix(构建): 彻底修复Vercel依赖缺失问题并添加构建检测
- 在outputFileTracingIncludes中显式包含sax和xmlbuilder
- 新增postbuild检测脚本，编译时自动检测依赖完整性
- 解决npm依赖提升导致的File Tracing盲区问题

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "sh -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && . \"$HOME/.nvm/nvm.sh\" && nvm use && node server.js' || node server.js",
     "dev:http": "next dev",
     "build": "sh -c '[ -s \"$HOME/.nvm/nvm.sh\" ] && . \"$HOME/.nvm/nvm.sh\" && nvm use && next build' || next build",
+    "postbuild": "node scripts/check-missing-deps.js",
     "start": "next start"
   },
   "keywords": [
