feat(api): implement unified error handling and logging for API requests
- Introduced `apiHandler` for standardized error handling and logging in API routes.
- Added `apiGet` and `apiPost` functions for consistent API request handling on the frontend.
- Enhanced error messages with `getErrorMessage` for better user feedback.
- Updated multiple API routes to utilize the new error handling and logging mechanisms, improving maintainability and observability.
- Removed unused dependencies from package.json and package-lock.json.

--- a/vercel.json
+++ b/vercel.json
@@ -69,11 +69,27 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=63072000; includeSubDomains; preload"
         }
       ]
     }
   ],
   "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "header",
+          "key": "x-forwarded-proto",
+          "value": "http"
+        }
+      ],
+      "destination": "https://musicdownloader.cc/:path*",
+      "permanent": true
+    },
     {
       "source": "/api/sitemap.xml",
       "destination": "/sitemap.xml",
