--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.2.0",
-    "sax": "^1.4.1",
-    "xml2js": "^0.6.2",
-    "xmlbuilder": "^15.1.1"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "24.9.1",
